# xkpwgen.rs

./: .gitignore  .travis.yml  COPYING  Cargo.toml  README.md  build.rs  release.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: generate.rs
scripts/: check
src/: lib.rs  main  main.rs  wordlist.rs  words.txt
tests/: cli.rs  generate.rs  wordlist.rs
