[package]
name = "xkpwgen"
version = "0.8.1"
description = "Generate XKCD 936 passwords"
readme = "README.md"
homepage = "https://codeberg.org/flausch/xkpwgen.rs"
repository = "https://codeberg.org/flausch/xkpwgen.rs.git"
keywords = ["xkcd", "936", "password"]
categories = ["command-line-utilities", "text-processing"]
license = "Apache-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2021"

[dependencies]
rand = "^0.8"
clap = { version = "3.0.10", features = ["derive"] }

[features]
default = []

[[bin]]
doc = false
name = "xkpwgen"
