[package]
name = "xkpwgen"
version = "1.0.0"
description = "Generate XKCD 936 passwords"
readme = "README.md"
homepage = "https://github.com/lunaryorn/xkpwgen.rs"
repository = "https://github.com/lunaryorn/xkpwgen.rs.git"
keywords = ["xkcd", "936", "password"]
categories = ["command-line-utilities", "text-processing"]
license = "Apache-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2021"

[dependencies]
rand = "^0.8"
clap = { version = "4.0.14", features = ["derive"] }

[features]
default = []

[[bin]]
doc = false
name = "xkpwgen"
