[package]
name = "xkpwgen"
version = "1.0.1"
description = "Generate XKCD 936 passwords"
readme = "README.md"
homepage = "https://github.com/swsnr/xkpwgen.rs"
repository = "https://github.com/swsnr/xkpwgen.rs.git"
keywords = ["xkcd", "936", "password"]
categories = ["command-line-utilities", "text-processing"]
license = "Apache-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2021"

[dependencies]
rand = "^0.8"
clap = { version = "4.0.29", features = ["derive"] }

[features]
default = []

[[bin]]
doc = false
name = "xkpwgen"
